--- a/web/src/index.html
+++ b/web/src/index.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="utf-8" />
   <title>SPANDigital Codeassistant Web</title>
+  <link
+          rel="stylesheet"
+          href="https://fonts.googleapis.com/icon?family=Material+Icons"
+  />
 </head>
 <body>
 <div id="app"></div>
